# cpu

./: .gitignore  3a6000.d2  3a6000.html  3a6000.md  404.html  README.md  ampere_one.html  ampere_one.md  avalanche.d2  avalanche.html  avalanche.md  build.sh  cbp.html  cbp.md  comparison.html  comparison.md  cortex_a73.d2  cortex_a73.html  cortex_a73.md  cortex_a75.html  cortex_a75.md  cortex_a76.d2  cortex_a76.html  cortex_a76.md  cortex_a77.d2  cortex_a77.html  cortex_a77.md  cortex_x1.d2  cortex_x1.html  cortex_x1.md  cortex_x2.d2  cortex_x2.html  cortex_x2.md  cortex_x3.d2  cortex_x3.html  cortex_x3.md  cortex_x4.d2  cortex_x4.html  cortex_x4.md  cortex_x925.d2  (+84 more)
.github/workflows/: publish.yml
data/firestorm/: btb.csv  cache.txt  lsu.csv  ras.csv
data/golden_cove/: bob.csv  ras.csv  rf.csv  rob.csv  sched.csv
data/zen2/: lsu.csv
docs/: 3a6000.md  Makefile  ampere_one.d2  ampere_one.md  avalanche.d2  avalanche.md  build.sh  cbp.md  comparison.md  cortex_a73.d2  cortex_a73.md  cortex_a75.d2  cortex_a75.md  cortex_a76.d2  cortex_a76.md  cortex_a77.d2  cortex_a77.md  cortex_x1.d2  cortex_x1.md  cortex_x2.d2  cortex_x2.md  cortex_x3.d2  cortex_x3.md  cortex_x4.d2  cortex_x4.md  cortex_x925.d2  cortex_x925.md  cougar_cove.md  crestmont.d2  crestmont.md  darkmont.d2  darkmont.md  dieshot.md  firestorm.d2  firestorm.md  golden_cove.d2  golden_cove.md  gracemont.d2  gracemont.md  index.md  (+37 more)
overrides/partials/: comments.html
search/: search_index.js  search_index.json
