[tool.poetry]
name = "cpu"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
mkdocs-glightbox = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
cairosvg = "^2.7.1"
mkdocs-macros-plugin = "^1.0.5"
pandas = "^3.0.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
